--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">LiveLocationApplication</string>
     <string name="default_notification_channel_id">channelId\n</string>
+    <string name="googleKey">AIzaSyBRq99yg4I0L0qlTWsspLMQms9uQBd0dfA</string>
 </resources>
